--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "portfolio, rohit nethi",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass public/scss/main.scss public/css/styles.css -w ",
+    "compile:sass": "node-sass -w public/scss/main.scss public/css/styles.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "author": "Rohit Nethi",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^4.7.2"
+    "node-sass": "^4.7.2",
+    "typed.js": "^2.0.6"
   }
 }
